@@ -15,8 +15,8 @@ build_and_test_rust:
   script:
     - cargo fmt -- --check
     - cargo clippy -- -D warnings
-    - cargo build --all-targets
-    - cargo test
+    - cargo build --all-targets --all-features
+    - cargo test --all-features
   after_script:
     - for file in $(find target/debug/deps -executable \( -name "$(basename messy_json)-*" -o -name "mod-*" \) );
       do
