@@ -9,10 +9,14 @@ repository = "https://gitlab.com/basiliq/messy_json"
 license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+uuid = ["_uuid"]
+
 [dependencies]
 serde = "1"
 serde_json = "1"
 itertools = "0.10.0"
+_uuid = { package = "uuid", version = "0.8", features = [ "v4", "serde" ], optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.3.4", features = [ "html_reports", "cargo_bench_support" ] }
