@@ -9,3 +9,6 @@ mod parse_nested_object;
 mod parse_simple;
 mod root_array;
 mod unexact_obj;
+
+#[cfg(feature = "uuid")]
+mod uuid;
